# berlin-marso-hackathon

./: .gitignore  BUILD_SPEC.md  PIVOT_BUILD.md  README.md  SUBMISSION.md  build_notebook.py  challenge.md  eval.py  notebook.ipynb  pixi.toml  pyproject.toml  reward.py  starter.ipynb  submission.example.yaml  test.py  train.py
conf/: config.yaml
conf/difficulty/: easy.yaml  hard.yaml  medium.yaml  simple.yaml
conf/eval/: default.yaml  easy_swapped.yaml
conf/randomization/: train.yaml
examples/: random_policy.py  scripted_policy.py
il/: README.md  _replay.py  build_notebook_il.py  gen_demos.py  notebook_il.ipynb  train.py
il/baselines/act/: record_act.py
il/baselines/act/act/: make_env.py
il/baselines/bc/: bc_rgb.py
il/baselines/bc/behavior_cloning/: make_env.py
il/baselines/diffusion_policy/: record_dp.py  train.py  train_rgbd.py
il/baselines/diffusion_policy/diffusion_policy/: evaluate.py  lerobot_encoder.py  make_env.py
il/conf/: train.yaml
il/conf/method/: dp_hard.yaml  dp_medium.yaml  dp_rgb.yaml
warehouse_sort/: __init__.py  env.py  il_policy.py  policy.py  reward.py  simple_sort_env.py  staged_reward.py  utils.py
