[project]
name = "warehouse_sort"
version = "0.1.0"
description = "Warehouse Colour-Sort Pick-and-Place hackathon starter (ManiSkill 3)"
requires-python = ">=3.10"
dependencies = [
    "mani_skill>=3.0.0",
    "torch",
    "gymnasium",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy",
    "tyro",
    "matplotlib",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["warehouse_sort"]
py-modules = ["train", "test", "eval"]
